DTSPB-4856 fix sonar